Fix for 2671 on IE9 psuedo elements do not like rem line height

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -513,9 +513,10 @@ div.xblock-student_view {
     border-radius: 5px;
     border: 1px solid $border-line;
     white-space: nowrap;
-    padding: 5px;
+    padding: 0 5px;
     text-transform: none;
     @include font-spec(12);
+    line-height: 18px;
   }
 
   &:hover {
